--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,10 +3,10 @@ body {
   font-family: Helvetica;
 }
 
-a.nuxt-link-exact-active {
+/* a.nuxt-link-exact-active {
   color: white;
   background-color: black;
-}
+} */
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
